2003-03-31  Ethan Merritt <merritt@u.washington.edu>

	* src/bitmap.c term/pdf.trm: Revise the order of colors slightly
	to maximize contrast between successive plots (affects gd.trm also).

	* src/term.c: Add linewidth and fill patterns to terminal test.

2003-03-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/save.c (save_set_all): Don't compare an enum label to a
 	pointer; not even if the enum is zero.  Found by John Bollinger on
 	MS VC++.

	* src/show.c (show_key): Likewise.

2003-03-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS term/gnugraph.trm term/openstep.trm: 
	Terminal provided by openstep is called "openstep", not "next".
	Terminal provided by gnugraph is called "gnugraph", not "unixplot".

2003-03-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Pronounce looking at demo/pm3d.dem.

	* demo/pm3d.dem: In demo of corners2color, transpose positions of
	'c2' and 'c3'.

2003-03-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm(PS_filled_polygon): Don't call PS_FLUSH_PATH but reset
	ps_path_count instead (flush is automatic). Fixes broken pm3d map
	layout (required by pm3dConvert*.awk scripts) due to "stroke\n" in
	PS_FLUSH_PATH.

	* demo/pm3d.dem: Replace "set view 180,..." by "set pm3d map".

2003-03-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm: Allow to use both the default '"gnuplot_x11.exe"' and
	optional 'GNUPLOT_X11 ".exe"' for initializing X11_default_command[]
	under OS/2 and Windows.

2003-03-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (boundary3d): Avoid division by zero if graph too
 	small to contain the key.

2003-03-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gd.trm term/gif.trm: Added #undef gdfont after it is not used
	any longer.

2003-03-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/eval.c (gp_exp): Make this a function in all cases.  If
 	MINEXP wasn't set, use special version that removes ERANGE caused