@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: bitmap.c,v 1.18 2003/03/31 19:29:08 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: bitmap.c,v 1.19 2003/03/31 22:16:57 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - bitmap.c */
@@ -823,7 +823,7 @@ static unsigned char fill_halftone_bitmaps[fill_halftone_num][8] ={
   { 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff }    /* solid pattern */
 };
 
-#define fill_pattern_num 7
+#define fill_pattern_num 8
 static unsigned char fill_pattern_bitmaps[fill_pattern_num][8] ={
   { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 },   /* no fill */
   { 0x01, 0x02, 0x04, 0x08, 0x10, 0x20, 0x40, 0x80 },   /* diagonal stripes (1) */
@@ -831,7 +831,8 @@ static unsigned char fill_pattern_bitmaps[fill_pattern_num][8] ={
   { 0x11, 0x11, 0x22, 0x22, 0x44, 0x44, 0x88, 0x88 },   /* diagonal stripes (3) */
   { 0x88, 0x88, 0x44, 0x44, 0x22, 0x22, 0x11, 0x11 },   /* diagonal stripes (4) */
   { 0x03, 0x0C, 0x30, 0xC0, 0x03, 0x0C, 0x30, 0xC0 },   /* diagonal stripes (5) */
-  { 0xC0, 0x30, 0x0C, 0x03, 0xC0, 0x30, 0x0C, 0x03 }    /* diagonal stripes (6) */
+  { 0xC0, 0x30, 0x0C, 0x03, 0xC0, 0x30, 0x0C, 0x03 },   /* diagonal stripes (6) */
+  { 0x81, 0x42, 0x24, 0x18, 0x18, 0x24, 0x42, 0x81 }    /* cross-hatch      (7) */
 };
 #endif /* USE_ULIG_FILLEDBOXES */
 
